--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,22 @@
+cassandra-driver==3.29.1
+chroma-hnswlib==0.7.3
+chromadb==0.4.24
 dj-database-url==2.1.0
 Django==4.1.13
-gunicorn==21.2.0
+django-dbbackup==4.1.0
+django-environ==0.11.2
+django-excel==0.0.10
+django-extensions==3.2.3
 django-rest-auth==0.9.5
+django-tables2==2.7.0
+djangorestframework==3.14.0
 djongo==1.3.6
+dnspython==2.6.1
+drfpasswordless==1.5.9
+gunicorn==21.2.0
 jsonpatch==1.33
 jsonpointer==2.4
+mysqlclient==2.2.4
 numpy==1.26.4
 pymongo==3.12.3
+
