--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 dj-database-url==2.1.0
-chromadb==0.4.24
+django-excel==0.0.10
+django-extensions==3.2.3
+django-rest-auth==0.9.5
+djangorestframework==3.14.0
 Django==4.1.13
 djongo==1.3.6
 gunicorn==21.2.0
