--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-extensions==3.2.3
 django-rest-auth==0.9.5
 djangorestframework==3.14.0
 Django==4.1.13
+dnspython==2.6.1
 djongo==1.3.6
 gunicorn==21.2.0
 pymongo==3.12.3
